# usb-traffic-light-mqtt-bridge

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.test.yml  docker-compose.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: tests.yml
docs/adr/: 001-python-as-implementation-language.md  002-pyusb-as-usb-library.md  003-mqtt-client-threading.md  004-hardware-abstraction.md  005-environment-variable-configuration.md  006-docker-multi-stage-build.md  007-test-strategy.md  008-mqtt-topic-structure.md  009-exponential-backoff-reconnect.md  010-home-assistant-discovery-stub.md  011-wildcard-subscription.md  012-pattern-topic.md  013-animated-patterns.md  014-traffic-light-animations.md
src/cleware_bridge/: __init__.py  __main__.py  cleware.py  config.py  discovery.py  main.py  models.py  mqtt_client.py  traffic_light.py
tests/integration/: conftest.py  test_bridge_integration.py  test_docker_compose.py
tests/unit/: test_cleware.py  test_config.py  test_discovery.py  test_main.py  test_models.py  test_mqtt_client.py  test_traffic_light.py
