[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "usb-traffic-light-mqtt-bridge"
version = "1.0.0"
description = "MQTT to USB Traffic Light (Ampel) Bridge"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "paho-mqtt>=2.0.0,<3.0.0",
    "pyusb>=1.2.0,<2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[project.scripts]
usb-traffic-light-mqtt-bridge = "cleware_bridge.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
plugins = []

[[tool.mypy.overrides]]
module = ["usb.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["paho.*", "paho.mqtt.*"]
follow_imports = "skip"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
]

[tool.coverage.run]
source = ["cleware_bridge"]

[tool.coverage.report]
show_missing = true
fail_under = 90
